--- a/setup.cfg
+++ b/setup.cfg
@@ -3,5 +3,8 @@ exclude = .git,build,dist
 ignore = E124,E125,E128,E261,E301,E302,E303
 max-line-length = 79
 
+[metadata]
+license_file = LICENSE
+
 [tool:pytest]
 testpaths = tests
