Move to Xenial for non-dev Python 3.7 and eventually 3.8

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: xenial
 language: python
 cache:
   directories:
@@ -7,7 +8,7 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
-  - "3.7-dev"
+  - "3.7"
   - "pypy"
   - "pypy3"
 matrix:
