Make pytest mandatory

--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -19,7 +19,6 @@ jobs:
       - run: mkdir --parents --verbose .mypy_cache
       - run: mypy --ignore-missing-imports --install-types --non-interactive . || true
       - run: pip install invoke
-      - run: pytest || true
-      #- run: pytest --doctest-modules . || true
+      - run: pytest
       - run: shopt -s globstar && pyupgrade --py36-plus **/*.py || true
       - run: safety check
