--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  orb: invocations/orb@1.0.4
+  orb: invocations/orb@1.3.0
 
 
 jobs:
@@ -23,7 +23,7 @@ workflows:
       - orb/format:
           name: Style check
       - orb/coverage:
-          name: Test 3.6 (w/ coverage)
+          name: Test
       - confirm-loaded:
           name: Confirm plugin loads into pytest
       - orb/docs:
@@ -32,10 +32,10 @@ workflows:
       - orb/test-release:
           name: Release test
       - orb/test:
-          name: Test << matrix.version >>
+          name: << matrix.version >>
           # It's not worth testing on other interpreters if the baseline one
           # failed. Can't run >4 jobs at a time anyhow!
-          requires: ["Test 3.6 (w/ coverage)"]
+          requires: ["Test"]
           matrix:
             parameters:
               version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
