Add pytest.ini to sdist

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,3 +6,4 @@ recursive-exclude docs/_build *
 include dev-requirements.txt
 recursive-include tests *
 recursive-exclude tests *.pyc *.pyo
+include pytest.ini
